refactoring contracts endpoint
