# architecture/OpenApi/api.yaml
@@ -416,7 +416,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/contractCrtModel'
+              $ref: '#/components/schemas/contractCreateModel'
         required: true
       responses:
         '200':
@@ -676,10 +676,10 @@ components:
       description: 'Contract status in the system.'
       type: string
       enum:
-        - Filed
-        - OnProcessing
+        - Created
         - Rejected
         - Accepted
+        - Performing
         - Performed
         - Completed
       example:
@@ -689,9 +689,7 @@ components:
       type: object
       properties:
         adventurerStatus:
-          description: 'Adventurer status: active/dead/unconfirmed.'
-          type: string
-          example: 'Active'
+          $ref: '#/components/schemas/adventurerStatus'
         adventurerExperience:
           description: 'Experience points obtained by the adventurer'
           type: integer
@@ -729,83 +727,37 @@ components:
           type: integer
           example: 15
 
-    contractCrtModel:
-      allOf:
-        - type: object
-          properties:
-            customer:
-              description: 'Contract customer.'
-              type: integer
-              example: 12
-            nameContract:
-              description: 'Name of contract.'
-              type: string
-              example: 'Killing goblins in the mountains'
-            reward:
-              description: 'Reward for completed task.'
-              type: integer
-              example: 500
-            minRank:
-              description: 'Minimum required level for completing the task.'
-              type: string
-              example: 'Silver'
-            address:
-              description: 'The address at which the contract is to be performed.'
-              type: boolean
-              example: 'Novoizmaylovsky Prospekt, 21k4, Saint Petersburg, Russia'
-            contractStatus:
-              description: 'The status of the contract.'
-              type: string
-              example: 'Rejected'
-            description:
-              description: 'Description of the contract submitted by the contractor.'
-              type: string
-              example: 'You need to kill 10 goblins and 1 Hobbs in the winter cave. They are poorly prepared, do not have armor and weapons.'
-            requestComment:
-              description: 'Review of the Guild Registrar on the submitted contract.'
-              type: string
-              example: 'The abilities of goblins and Hobbs are not described.'
-
     contractCreateModel:
-      allOf:
-        - type: object
-          properties:
-            customer:
-              description: 'Contract customer.'
-              type: integer
-              example: 12
-            executor:
-              description: 'Contract executor.'
-              type: integer
-              example: 25
-            nameContract:
-              description: 'Name of contract.'
-              type: string
-              example: 'Killing goblins in the mountains'
-            reward:
-              description: 'Reward for completed task.'
-              type: integer
-              example: 500
-            minRank:
-              description: 'Minimum required level for completing the task.'
-              type: string
-              example: 'Silver'
-            address:
-              description: 'The address at which the contract is to be performed.'
-              type: boolean
-              example: 'Novoizmaylovsky Prospekt, 21k4, Saint Petersburg, Russia'
-            contractStatus:
-              description: 'The status of the contract.'
-              type: string
-              example: 'Rejected'
-            description:
-              description: 'Description of the contract submitted by the contractor.'
-              type: string
-              example: 'You need to kill 10 goblins and 1 Hobbs in the winter cave. They are poorly prepared, do not have armor and weapons.'
-            requestComment:
-              description: 'Review of the Guild Registrar on the submitted contract.'
-              type: string
-              example: 'The abilities of goblins and Hobbs are not described.'
+      type: object
+      properties:
+        customer:
+          description: 'Contract customer.'
+          type: integer
+          example: 12
+        nameContract:
+          description: 'Name of contract.'
+          type: string
+          example: 'Killing goblins in the mountains'
+        reward:
+          description: 'Reward for completed task.'
+          type: integer
+          example: 500
+        minRank:
+          description: 'Minimum required level for completing the task.'
+          type: string
+          example: 'Silver'
+        address:
+          description: 'The address at which the contract is to be performed.'
+          type: boolean
+          example: 'Novoizmaylovsky Prospekt, 21k4, Saint Petersburg, Russia'
+        description:
+          description: 'Description of the contract submitted by the contractor.'
+          type: string
+          example: 'You need to kill 10 goblins and 1 Hobbs in the winter cave. They are poorly prepared, do not have armor and weapons.'
+        requestComment:
+          description: 'Review of the Guild Registrar on the submitted contract.'
+          type: string
+          example: 'The abilities of goblins and Hobbs are not described.'
 
     contractModel:
       allOf:
@@ -828,12 +780,10 @@ components:
               type: integer
               example: 500
             minRank:
-              description: 'Minimum required level for completing the task.'
-              type: string
-              example: 'Silver'
+              $ref: '#/components/schemas/ranksModel'
             address:
               description: 'The address at which the contract is to be performed.'
-              type: boolean
+              type: string
               example: 'Novoizmaylovsky Prospekt, 21k4, Saint Petersburg, Russia'
             createTime:
               description: 'Date the contract was created.'
@@ -841,9 +791,7 @@ components:
               format: date-time
               example: '2017-07-21T17:32:28Z'
             contractStatus:
-              description: 'The status of the contract.'
-              type: string
-              example: 'Rejected'
+              $ref: '#/components/schemas/contractStatus'
             description:
               description: 'Description of the contract submitted by the contractor.'
               type: string
@@ -860,8 +808,6 @@ components:
               description: 'Revocation of the adventurer is contract performance.'
               type: string
               example: 'All dead.'
-
-
 
     errorModel:
       type: object
