# src/main/java/com/itmo/goblinslayersystemserver/models/enums/ContractStatus.java
@@ -1,10 +1,33 @@
 package com.itmo.goblinslayersystemserver.models.enums;
 
 public enum ContractStatus {
-    Filed,
-    OnProcessing,
+    /**
+     * Создан
+     */
+    Created,
+
+    /**
+     * Отколнен регистратором
+     */
     Rejected,
+
+    /**
+     * Принят регистраторм на исполнение
+     */
     Accepted,
+
+    /**
+     * Находится на исполнении авантюристом
+     */
+    Performing,
+
+    /**
+     * Исполнен авантюристом
+     */
     Performed,
+
+    /**
+     * Завершен
+     */
     Completed
 }
