# src/main/java/com/itmo/goblinslayersystemserver/services/implementation/ContractService.java
@@ -1,14 +1,17 @@
 package com.itmo.goblinslayersystemserver.services.implementation;
 
+import com.itmo.goblinslayersystemserver.dto.ContractCreateDto;
+import com.itmo.goblinslayersystemserver.dto.ContractUpdateDto;
 import com.itmo.goblinslayersystemserver.exceptions.NotFoundException;
 import com.itmo.goblinslayersystemserver.models.Contract;
+import com.itmo.goblinslayersystemserver.models.enums.ContractStatus;
 import com.itmo.goblinslayersystemserver.repositories.ContractRepository;
 import com.itmo.goblinslayersystemserver.services.IContractService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.GregorianCalendar;
+import java.util.Optional;
 
 @Service
 public class ContractService implements IContractService {
@@ -17,18 +20,30 @@ public class ContractService implements IContractService {
     ContractRepository contractRepository;
 
     @Override
-    public ArrayList<Contract> getContractsList() {
+    public ArrayList<Contract> get() {
         return (ArrayList<Contract>) contractRepository.findAll();
     }
 
     @Override
-    public Contract createContract(Contract contract) {
-        //contract.setCreateTime(new java.sql.Timestamp(GregorianCalendar.getInstance().getTimeInMillis()));
+    public Contract create(Contract contract) {
+        contract.setContractStatus(ContractStatus.Created);
         return contractRepository.save(contract);
     }
 
     @Override
-    public Contract getContractById(Integer id) {
+    public Contract create(ContractCreateDto contractDto) {
+        Contract contract = new Contract();
+        contract.setAddress(contractDto.getAddress());
+        contract.setCustomer(contractDto.getCustomer());
+        contract.setDescription(contractDto.getDescription());
+        contract.setNameContract(contractDto.getNameContract());
+        contract.setRequestComment(contractDto.getRequestComment());
+        contract.setReward(contractDto.getReward());
+        return create(contract);
+    }
+
+    @Override
+    public Contract get(Integer id) {
         try {
             return contractRepository.findById(id).get();
         } catch (Exception e) {
@@ -37,40 +52,46 @@ public class ContractService implements IContractService {
     }
 
     @Override
-    public Contract updateContractById(Integer id, Contract contract) {
-        Contract updatableContract;
+    public Contract update(Integer id, Contract update) {
+        Contract contract;
 
-        try {
-            updatableContract = contractRepository.findById(id).get();
-        } catch (Exception e) {
+        Optional<Contract> contractOptional = contractRepository.findById(id);
+        if (!contractOptional.isPresent()) {
             throw new NotFoundException();
         }
 
-        updatableContract.setCustomer(contract.getCustomer());
-        updatableContract.setExecutor(contract.getExecutor());
-        updatableContract.setNameContract(contract.getNameContract());
-        updatableContract.setReward(contract.getReward());
-        updatableContract.setMinRank(contract.getMinRank());
-        updatableContract.setAddress(contract.getAddress());
-        updatableContract.setCreated(contract.getCreated());
-        updatableContract.setContractStatus(contract.getContractStatus());
-        updatableContract.setDescription(contract.getDescription());
-        updatableContract.setRequestComment(contract.getRequestComment());
-        updatableContract.setRegistrarComment(contract.getRegistrarComment());
-        updatableContract.setClosedComment(contract.getClosedComment());
-        contractRepository.save(updatableContract);
+        contract = contractOptional.get();
+        contract.setExecutor(update.getExecutor());
+        contract.setReward(update.getReward());
+        contract.setMinRank(update.getMinRank());
+        contract.setAddress(update.getAddress());
+        contract.setContractStatus(update.getContractStatus());
+        contract.setDescription(update.getDescription());
+        contract.setRequestComment(update.getRequestComment());
+        contract.setRegistrarComment(update.getRegistrarComment());
+        contract.setClosedComment(update.getClosedComment());
+        contractRepository.save(contract);
 
-        return updatableContract;
+        return get(contract.getId());
     }
 
     @Override
-    public String deleteContractById(Integer id) {
-        try {
-            contractRepository.deleteById(id);
-        } catch (Exception e) {
-            throw new NotFoundException();
-        }
+    public Contract update(Integer id, ContractUpdateDto update) {
+        Contract contract = new Contract();
+        contract.setExecutor(update.getExecutor());
+        contract.setReward(update.getReward());
+        contract.setMinRank(update.getMinRank());
+        contract.setAddress(update.getAddress());
+        contract.setContractStatus(update.getContractStatus());
+        contract.setDescription(update.getDescription());
+        contract.setRequestComment(update.getRequestComment());
+        contract.setRegistrarComment(update.getRegistrarComment());
+        contract.setClosedComment(update.getClosedComment());
+        return update(id, contract);
+    }
 
-        return "";
+    @Override
+    public void delete(Integer id) {
+        contractRepository.deleteById(id);
     }
 }
